--- a/PCD_KEL8_FIX.ipynb
+++ b/PCD_KEL8_FIX.ipynb
@@ -485,7 +485,7 @@
     "        self.train_dir = train_dir\n",
     "        self.test_dir = test_dir\n",
     "        self.classifier = Classifier()\n",
-    "        self.classifier.categories = []  # Initialize with your categories\n",
+    "        self.classifier.categories = []  \n",
     "\n",
     "    def evaluate(self):\n",
     "        \"\"\"Evaluate classifier performance on test set\"\"\"\n",
