--- a/PCD_KEL8_FIX.ipynb
+++ b/PCD_KEL8_FIX.ipynb
@@ -336,7 +336,7 @@
     "\n",
     "    @staticmethod\n",
     "    def rgb_to_hsv(rgb_img):\n",
-    "        \"\"\"Convert RGB image to HSV color space manually\"\"\"\n",
+    "        \"\"\"Convert RGB image to HSV color space\"\"\"\n",
     "        # Normalize RGB values to [0, 1] range\n",
     "        rgb_norm = rgb_img.astype(np.float32) / 255.0\n",
     "        r, g, b = rgb_norm[:, :, 0], rgb_norm[:, :, 1], rgb_norm[:, :, 2]\n",
